syntax = "proto3";

option go_package = "genproto/auth";

package auth;


service AuthService {
    rpc Register(RegisterReq) returns (Void);
    rpc Login(LoginReq) returns (User);
    rpc ForgotPassword(GetByEmail) returns (Void);
    rpc ResetPassword(ResetPassReq) returns (Void);
    rpc SaveRefreshToken(RefToken) returns (Void);
    rpc RefreshToken(GetByEmail) returns (LoginRes);
    rpc ChangeRole(Role) returns (Void);  
}
message Void{}

message RegisterReq {
    string first_name = 1;
    string email = 2;
    string password = 3;
    string last_name = 4;
    string phone_number = 5;
    string role = 6;
}

message User {
    string id = 1;
    string first_name = 2;
    string email = 3;
    string role = 4;
    string last_name = 5;
    string phone_number = 6;
}

message LoginReq {
    string first_name = 1;
    string password = 2;
}

message LoginRes {
    string token = 1;
    string expires_at = 2;
}

message GetByEmail {
    string email = 1;
}

message ResetPassReq {
    string reset_token = 1;
    string email = 2;
    string new_password = 3;
}

message ResetPassReqBody {
    string reset_token = 1;
    string new_password = 2;
}

message Params {
    string from = 1;
    string password = 2;
    string to = 3;
    string message = 4;
    string code = 5;
}

message RefToken {
    string id = 1;
    string user_id = 2;
    string token = 3;
    string created_at = 4;
    string updated_at = 5;
    string deleted_at = 6;
}

message Role {
    string id = 1;
    string role = 2;
}